# celine-dashboards

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yaml  dump.yaml  instances.example.yaml  pyproject.toml  skaffold.yaml  taskfile.yaml  version.jupyter.txt  version.txt
.github/: dependabot.yml
.github/workflows/: jupyter-release.yml  superset-release.yml
config/caddy/: Caddyfile
config/jupyter/: jupyterhub_config.py
config/keycloak/import/: realm-celine.json
config/oauth2-proxy/: oauth2-proxy.cfg
config/postgres/: init-db.sh
config/postgres/init/: 00-create-roles.sql  02-create-db.sql
config/superset/: .env.example  requirements-local.txt  superset-bootstrap.sh  superset-setup.sh
config/superset/pythonpath_dev/: superset_config.py
docs/: architecture.md  authentication.md  development.md  services.md
src/celine/superset/auth/: user.py
src/celine/superset/cli/openapi/superset_client/api/annotation_layers/: get_api_v1_annotation_layer.py  get_api_v1_annotation_layer_info.py  post_api_v1_annotation_layer.py
src/celine/superset/cli/openapi/superset_client/api/cache_rest_api/: post_api_v1_cachekey_invalidate.py
src/celine/superset/cli/openapi/superset_client/api/charts/: delete_api_v1_chart.py  (+3 more)
src/celine/superset/cli/openapi/superset_client/models/: advanced_data_type_schema.py  annotation_layer_annotation_type.py  annotation_layer_opacity_type_1.py  annotation_layer_rest_api_get_list_user_1.py  annotation_layer_rest_api_put.py  annotation_layer_style.py  annotation_rest_api_get_list.py  cache_invalidation_request_schema.py  cache_rest_api_put.py  catalogs_response_schema.py  chart_cache_warm_up_request_schema.py  chart_cache_warm_up_response_single.py  chart_data_aggregate_options_schema.py  chart_data_datasource_type.py  chart_data_geodetic_parse_options_schema.py  chart_data_post_processing_operation_operation.py  chart_data_query_context_schema_result_format.py  chart_data_query_object_applied_time_extras_type_0.py  chart_data_query_object_result_type_type_1.py  chart_data_rest_api_get_list_tag_type.py  chart_data_rest_api_put_datasource_type_type_3_type_1.py  chart_entity_response_schema.py  chart_rest_api_post_datasource_type.py  chart_rest_api_put.py  chart_rest_api_put_datasource_type_type_3_type_1.py  css_template_rest_api_get.py  css_template_rest_api_get_list_user_1.py  css_template_rest_api_post.py  current_user_put_schema.py  dashboard_dataset_schema.py  dashboard_dataset_schema_column_formats.py  dashboard_rest_api_get_list_tag.py  dashboard_rest_api_get_list_user_2.py  database_connection_schema_parameters_schema.py  database_related_dashboards.py  database_rest_api_get.py  database_rest_api_get_list.py  database_rest_api_post.py  database_rest_api_put_configuration_method.py  database_schema_access_for_file_upload_response.py  (+490 more)
tests/superset/auth/: test_groups.py
tests/superset/cli/: test_client.py
(+51 files in other folders)
