[project]
name = "celine-dashboards"
version = "1.1.0"
description = "CELINE dashboards toolkit — Superset SSO plugin, Superset management CLI, Jupyter JWT authorizer"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/celine-jupyter"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build --package celine-superset
    uv build --package celine-jupyter
"""
branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
commit_parser = "conventional"
upload_to_release = false
upload_to_pypi = false
commit_version_number = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "up"]
parse_squash_commits = true
ignore_merge_commits = true

[dependency-groups]
dev = [
    "python-semantic-release>=9.21.0",
]
